--- a/thongtin/sua-thong-tin.html
+++ b/thongtin/sua-thong-tin.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="thong-tin.css">
-    <link rel="stylesheet" href="/font/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../font/themify-icons-font/themify-icons/themify-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/picwish.png" type="image/icon type">
+    <link rel="icon" href="../img/picwish.png" type="image/icon type">
     <title>Sửa thông tin</title>
     <style>
         nav li:nth-of-type(4) a {
@@ -17,11 +17,11 @@
 <body>
     <header>
         <div id="logo">
-            <a href="/tongquan/tong-quan.html">GRP9</a>
+            <a href="../tongquan/tong-quan.html">GRP9</a>
         </div>
         <ul id="header-nav">
             <li>
-                <a href="/tongquan/tong-quan.html">
+                <a href="../tongquan/tong-quan.html">
                     <i class="ti-bar-chart-alt"></i>
                     Trang quản trị
                 </a>
@@ -34,7 +34,7 @@
                 </a>
                 <ul class="sub-nav-account">
                     <li>
-                        <a href="/thongtin/thong-tin.html">
+                        <a href="thong-tin.html">
                             <i class="acc-icon ti-user"></i>
                             Thông tin tài khoản
                         </a>
@@ -52,7 +52,7 @@
                         </a>
                     </li> -->
                     <li>
-                        <a href="/login/login.html">
+                        <a href="../login/login.html">
                             <i class="acc-icon ti-power-off"></i>
                             Đăng xuất
                         </a>
