--- a/themmoi/them-san-pham.html
+++ b/themmoi/them-san-pham.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="them-san-pham.css">
-    <link rel="stylesheet" href="/font/themify-icons-font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="../font/themify-icons-font/themify-icons/themify-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/picwish.png" type="image/icon type">
+    <link rel="icon" href="../img/picwish.png" type="image/icon type">
     <title>Thêm sản phẩm</title>
 </head>
 <body>
     <header>
         <div id="logo">
-            <a href="/tongquan/tong-quan.html">GRP9</a>
+            <a href="../tongquan/tong-quan.html">GRP9</a>
         </div>
         <ul id="header-nav">
             <li>
@@ -23,13 +23,13 @@
                 </a>
                 <ul class="sub-nav-add">
                     <li>
-                        <a href="/themmoi/them-san-pham.html">
+                        <a href="them-san-pham.html">
                             <i class="plus-icon2 ti-plus"></i>
                             Sản phẩm
                         </a>
                     </li>
                     <li>
-                        <a href="/themmoi/them-don-hang.html">
+                        <a href="them-don-hang.html">
                             <i class="plus-icon2 ti-plus"></i>
                             Đơn hàng
                         </a>
@@ -44,14 +44,14 @@
                 </a>
                 <ul class="sub-nav-account">
                     <li>
-                        <a href="/thongtin/thong-tin.html">
+                        <a href="../thongtin/thong-tin.html">
                             <i class="acc-icon ti-user"></i>
                             Tài khoản (Giám đốc)
                         </a>
                     </li>
 
                     <li>
-                        <a href="/login/login.html">
+                        <a href="../login/login.html">
                             <i class="acc-icon ti-power-off"></i>
                             Đăng xuất
                         </a>
@@ -63,21 +63,21 @@
     </header>
     <nav>
         <ul id="nav">
-            <li><a href="/tongquan/tong-quan.html">Tổng quan</a></li>
+            <li><a href="../tongquan/tong-quan.html">Tổng quan</a></li>
             <li>
                 <a href="#">Sản phẩm<i class="more-icon ti-angle-down"></i></a>
                 <ul class="sub-nav sanpham">
-                    <li><a href="/sanpham/san-pham.html"><i class="ti-dropbox"></i>Sản phẩm</i></a></li>
+                    <li><a href="../sanpham/san-pham.html"><i class="ti-dropbox"></i>Sản phẩm</i></a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">Đơn hàng<i class="more-icon ti-angle-down"></i></a>
                 <ul class="sub-nav donhang">
-                    <li><a href="/donhang/html/bo-loc.html"><i class="shopping-cart1 ti-shopping-cart"></i>Đơn hàng</a></li>
+                    <li><a href="../donhang/html/bo-loc.html"><i class="shopping-cart1 ti-shopping-cart"></i>Đơn hàng</a></li>
                     <!-- <li><a href=""><i class="ti-search"></i>Đơn trùng</a></li>
                     <li><a href=""><i class="ti-truck"></i>Chờ gửi vận chuyển</a></li> -->
-                    <li><a href="/donhang/html/khieu-nai.html"><i class="ti-alert"></i>Khiếu nại</a></li>
-                    <li><a href="/donhang/html/thanh-toan-cod-1.html"><i class="ti-check"></i>Đối soát</a></li>
+                    <li><a href="../donhang/html/khieu-nai.html"><i class="ti-alert"></i>Khiếu nại</a></li>
+                    <li><a href="../donhang/html/thanh-toan-cod-1.html"><i class="ti-check"></i>Đối soát</a></li>
                 </ul>
             </li>
             <li>
@@ -89,8 +89,8 @@
                             <i class="ti-angle-right"></i>
                         </a>
                         <ul class="sub-sub-nav doanhthu">
-                            <li><a href="/baocao/dt-tongquan.html"><i class="ti-bar-chart-alt"></i>Tổng quan</a></li>
-                            <li><a href="/baocao/dt-theotg.html"><i class="ti-calendar"></i>Theo thời gian</a></li>
+                            <li><a href="../baocao/dt-tongquan.html"><i class="ti-bar-chart-alt"></i>Tổng quan</a></li>
+                            <li><a href="../baocao/dt-theotg.html"><i class="ti-calendar"></i>Theo thời gian</a></li>
                         </ul>
                     </li>
                     <li>
@@ -100,8 +100,8 @@
                             <i class="ti-angle-right"></i>
                         </a>
                         <ul class="sub-sub-nav donhang">
-                            <li><a href="/baocao/dh-dontao.html"><i class="ti-calendar"></i>Đơn tạo</a></li>
-                            <li><a href="/baocao/dh-dontc.html"><i class="ti-check"></i>Đơn thành công</a></li>
+                            <li><a href="../baocao/dh-dontao.html"><i class="ti-calendar"></i>Đơn tạo</a></li>
+                            <li><a href="../baocao/dh-dontc.html"><i class="ti-check"></i>Đơn thành công</a></li>
                         </ul>
                     </li>
                 </ul>
