--- a/thongtin/thong-tin.html
+++ b/thongtin/thong-tin.html
@@ -76,15 +76,15 @@
         <table class="thongtin">
             <tr>
                 <td>Tên đăng nhập:</td>
-                <td></td>
+                <td>nhom9@gmail.com</td>
                 <td>Email:</td>
-                <td></td>
+                <td>nhom9@gmail.com</td>
             </tr>
             <tr>
                 <td>Tên đầy đủ:</td>
-                <td></td>
+                <td>nhom9</td>
                 <td>Mật khẩu:</td>
-                <td></td>
+                <td>123456789</td>
             </tr>
             <tr>
                 <td>Ngày sinh:</td>
@@ -94,13 +94,13 @@
             </tr>
             <tr>
                 <td>Thành phố:</td>
-                <td></td>
+                <td>Hà Nội</td>
                 <td>Quận huyện:</td>
-                <td></td>
+                <td>Đống Đa</td>
             </tr>
             <tr>
                 <td>Phường xã:</td>
-                <td></td>
+                <td>Láng Thượng</td>
                 <td>Địa chỉ:</td>
                 <td></td>
             </tr>
