--- a/tongquan/tong-quan.html
+++ b/tongquan/tong-quan.html
@@ -414,34 +414,34 @@
                                 <tr>
                                     <td>Mới</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                                 <tr>
                                     <td>Đã gửi vận chuyển</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                                 <tr>
                                     <td>Thành công</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                                 <tr>
                                     <td>Thất bại</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                                 <tr>
                                     <td>Hủy</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <td>Tổng</td>
                                     <td class="zero">0</td>
-                                    <td class="fuck">0</td>
+                                    <td class="09">0</td>
                                 </tr>
                             </tfoot>
                         </table>
