--- a/login/login.html
+++ b/login/login.html
@@ -6,77 +6,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../img/picwish.png" type="image/icon type">
-    <title>Login and Registration</title>
+    <title>Đăng nhập</title>
 </head>
 <body>
     <div class="wrapper">
         <div class="title-text">
-            <div class="title login">Login</div>
-            <div class="title signup">Signup</div>
+            <div class="title login">Đăng nhập</div>
+            <div class="title signup">Đăng ký</div>
         </div>
         <div class="form-container">
             <div class="slide-controls">
                 <input type="radio" name="slider" id="login" checked> 
                 <input type="radio" name="slider" id="signup">
-                <label for="login" class="slide login">Login</label>
-                <label for="signup" class="slide signup">Signup</label>
+                <label for="login" class="slide login">Đăng nhập</label>
+                <label for="signup" class="slide signup">Đăng ký</label>
                 <div class="slide-tab"></div>
             </div>
             <div class="form-inner">
                 <form action="#" class="login">
                     <div class="field">
-                        <input type="text" placeholder="Email Address" required>
+                        <input id="username-login" type="text" placeholder="Tên đăng nhập" required>
                     </div>
                     <div class="field">
-                        <input type="password" placeholder="Password" required>
+                        <input id="password-login" type="password" placeholder="Mật khẩu" required>
                     </div>
-                    <div class="pass-link"><a href="#">Forgot password?</a></div>
+                    <div class="pass-link"><a href="#">Quên mật khẩu?</a></div>
                     <div class="field btn">
                         <div class="btn-layer"></div>
-                        <input type="submit" value="Login" onclick="loginDone()">
+                        <input type="submit" value="Đăng nhập" onclick="submit_Login()">
                     </div>
-                    <div class="signup-link">Not a member? <a href="#">Signup now</a></div>
+                    <div class="signup-link">Cần một tài khoản? <a href="#">Đăng ký</a></div>
                 </form>
                 <form action="#" class="signup">
                     <div class="field">
-                        <input type="text" placeholder="Email Address" required>
+                        <input id="username-signup" type="text" placeholder="Tên đăng nhập" required>
+                    </div>
+                    <div class="field"> 
+                        <input id="password-signup" type="password" placeholder="Mật khẩu" required>
                     </div>
                     <div class="field">
-                        <input type="password" placeholder="Password" required>
-                    </div>
-                    <div class="field">
-                        <input type="password" placeholder="Confirm password" required>
+                        <input id="confirm-password" type="password" placeholder="Xác nhận" required>
                     </div>
                     <div class="field btn">
                         <div class="btn-layer"></div>
-                        <input type="submit" value="Signup">
+                        <input type="submit" value="Đăng ký miễn phí" onclick="submit_Signup()">
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <script>
-        const loginText = document.querySelector(".title-text .login");
-        const loginForm = document.querySelector("form.login");
-        const loginBtn = document.querySelector("label.login");
-        const signupBtn = document.querySelector("label.signup");
-        const signupLink = document.querySelector("form .signup-link a");
-        signupBtn.onclick = (()=>{
-          loginForm.style.marginLeft = "-50%";
-          loginText.style.marginLeft = "-50%";
-        });
-        loginBtn.onclick = (()=>{
-          loginForm.style.marginLeft = "0%";
-          loginText.style.marginLeft = "0%";
-        });
-        signupLink.onclick = (()=>{
-          signupBtn.click();
-          return false;
-        });
-
-        function loginDone() {
-            location.href="../tongquan/tong-quan.html"
-        }
-     </script>
+    <script src="login.js"></script>
 </body>
 </html>
